added functionality for image transformations