@@ -2,3 +2,7 @@
 ## Running Instructions
 1. javac -cp ".:./jars/*" TurtleHermitSchoolOfMastery.java
 2. java -cp ".:./jars/*" TurtleHermitSchoolOfMastery
+3. download javafx sdk
+4. export PATH_TO_FX=~/Documents/javafx-sdk-11.0.2/lib
+5. javac --module-path $PATH_TO_FX --add-modules javafx.controls -cp ".:./jars/*" TurtleHermitSchoolOfMastery.java
+6. java --module-path $PATH_TO_FX --add-modules javafx.controls -cp ".:./jars/*" TurtleHermitSchoolOfMastery
